--- a/html/51/menu.html
+++ b/html/51/menu.html
@@ -21,23 +21,26 @@
                 <a href="contact.html">Contact Us</a>-->
             </nav>
         </header>
-        <div style="width: 100%; height: 2px;"></div>
-        <h3><u>Menu</u></h3>
-        <table class="menu-table">
-            <tr>
-                <td>Small Cheese Pizza</td>
-                <td>$8.00</td>
-            </tr>
-            <tr>
-                <td>Regular Cheese Pizza</td>
-                <td>$10.00</td>
-            </tr>
-            <tr>
-                <td>Large Cheese Pizza</td>
-                <td>$15.00</td>
-            </tr>
-        </table>
-
+        <div class="content-div">
+            <h3><u>Menu</u></h3>
+            <table class="menu-table">
+                <tr>
+                    <td>Small Cheese Pizza</td>
+                    <td>$8.00</td>
+                </tr>
+                <tr>
+                    <td>Regular Cheese Pizza</td>
+                    <td>$10.00</td>
+                </tr>
+                <tr>
+                    <td>Large Cheese Pizza</td>
+                    <td>$15.00</td>
+                </tr>
+            </table>
+        </div>
+        <footer>
+            <p>&copy; 2023 Modche's Pizza. All rights reserved.</p>
+        </footer>
     </body>
 
 </html>
