--- a/html/52/resteraunt/menu.html
+++ b/html/52/resteraunt/menu.html
@@ -22,22 +22,15 @@
             </nav>
         </header>
         <div class="content-div">
-            <h3><u>Menu</u></h3>
-            <table class="menu-table">
-                <tr>
-                    <td>Small Cheese Pizza</td>
-                    <td>$8.00</td>
-                </tr>
-                <tr>
-                    <td>Regular Cheese Pizza</td>
-                    <td>$10.00</td>
-                </tr>
-                <tr>
-                    <td>Large Cheese Pizza</td>
-                    <td>$15.00</td>
-                </tr>
-            </table>
+            <h3 id="menu-title">Menu</h3>
+            <span class="menu-item">Small Cheese Pizza - $8.00</span>
+            <span class="menu-item">Medium Cheese Pizza - $12.00</span>
+            <span class="menu-item">Regular Cheese Pizza - $10.00</span>
+            <span class="menu-item">Large Cheese Pizza - $15.00</span>
         </div>
+        
+
+    
         <footer>
             <p>&copy; 2023 Modche's Pizza. All rights reserved.</p>
         </footer>
