--- a/html/53/index.html
+++ b/html/53/index.html
@@ -38,13 +38,16 @@
                 <a href="index.html">Home</a> |
                 <!-- <a href="about.html">About</a> |-->
                 <a href="menu.html">Menu</a> |
-                <a href="kashrus.html">Kashrus</a><!-- |
-                            <a href="cart.html">Cart</a> |
-                            <a href="contact.html">Contact Us</a>-->
+                <!--a href="kashrus.html">Kashrus</a> |
+                                            <a href="cart.html">Cart</a> |
+                                            <a href="contact.html">Contact Us</a>
+                        <a href="demonstration.html">See Us In Action</a-->
             </nav>
-            </header>
-
-        <img src="images/Cheese+Pizza+2_Regular.jpg" alt="Cheese Pizza" id="cheese-pizza-img" class="full-width-img">
+        </header>
+        <!--img src="images/Cheese+Pizza+2_Regular.jpg" alt="Cheese Pizza" id="cheese-pizza-img" class="full-width-img"-->
+        <video src="images/making-pizza.mp4" autoplay muted loop id="pizza-video">
+            Your browser does not support the video.
+        </video>
         <footer>
             <p>&copy; 2023 Modche's Pizza. All rights reserved.</p>
         </footer>
