--- a/html/53/menu.html
+++ b/html/53/menu.html
@@ -35,9 +35,10 @@
                 <a href="index.html">Home</a> |
                 <!-- <a href="about.html">About</a> |-->
                 <a href="menu.html">Menu</a> |
-                <a href="kashrus.html">Kashrus</a><!-- |
-                <a href="cart.html">Cart</a> |
-                <a href="contact.html">Contact Us</a>-->
+                <!--a href="kashrus.html">Kashrus</a> |
+                                    <a href="cart.html">Cart</a> |
+                                    <a href="contact.html">Contact Us</a>
+                <a href="demonstration.html">See Us In Action</a-->
             </nav>
         </header>
         <div class="content-div">
@@ -47,9 +48,9 @@
             <span class="menu-item">Regular Cheese Pizza - $10.00</span>
             <span class="menu-item">Large Cheese Pizza - $15.00</span>
         </div>
-        
 
-    
+
+
         <footer>
             <p>&copy; 2023 Modche's Pizza. All rights reserved.</p>
         </footer>
