Fixed loading animation for slow networks

--- a/js/71/homework.html
+++ b/js/71/homework.html
@@ -17,8 +17,8 @@
 
             #fileContents {
                 margin-top: 20px;
-                width: 40vh;
-                height: 40vh;
+                width: 300px;
+                height: 400px;
                 overflow: auto;
                 border: 1px solid black;
                 border-radius: 5px;
@@ -33,6 +33,7 @@
     </head>
 
     <body>
+        
         <div id="theDiv">
             <input type="text" id="fileNameInput" placeholder="Enter file name here">
             <button id="submitButton">Submit</button>
@@ -40,6 +41,7 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="homework.js"></script>
+        <script src="makeUpTest.js"></script>
     </body>
 
 </html>
