Fixed scrolling and other things

--- a/js/72/72.html
+++ b/js/72/72.html
@@ -9,14 +9,14 @@
         <style>
             body {
                 font-family: Arial, sans-serif;
-                margin: 20px;
+                xmargin: 20px;
                 background-color: #f4f4f4;
                 color: #333;
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
-                width: 100vw;
+                width: 100%;
 
             }
 
@@ -52,7 +52,7 @@
             <div class="w-screen h-1 bg-gray-300"></div>
         </header>
 
-        <div id="recipe-results" class="w-full max-w-full mx-auto mt-35"></div>
+        <div id="recipe-results" class="w-full max-w-full mx-auto mt-40"></div>
 
 
 
