Changed recipe to food in placeholder text

--- a/js/72/72.html
+++ b/js/72/72.html
@@ -45,7 +45,7 @@
                 <h1 class="text-xl font-bold">Welcome to the Recipe App</h1>
                 <p>Find delicious recipes!</p>
                 <form id="recipe-form" class="flex flex-wrap justify-center mt-2">
-                    <input type="text" id="recipe-input" placeholder="Enter recipe name"
+                    <input type="text" id="recipe-input" placeholder="Enter food name"
                         class="border p-2 mr-2 rounded">
                     <button id="search-button" type="submit"
                         class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 active:bg-blue-700 active:scale-95 transition duration-150 cursor-pointer">
