Finally managed to get the back button working!

--- a/js/73/secondAttempt.html
+++ b/js/73/secondAttempt.html
@@ -27,6 +27,8 @@
                 width: 100vw;
 
             }
+
+            
         </style>
     </head>
 
@@ -36,7 +38,7 @@
 
 
             <div class="flex-none w-32 flex justify-start">
-                <button id="back-button" class="invisible bg-gray-500 text-white p-2 rounded hover:bg-gray-600">
+                <button id="back-button" class="invisible bg-gray-500 text-white p-2 rounded hover:bg-gray-600 invisible">
                     Back to Results
                 </button>
             </div>
