Fixed border animations.

--- a/js/74/74.html
+++ b/js/74/74.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Definitely Not Youtube</title>
+        <title>Map App</title>
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
             body {
@@ -56,7 +56,7 @@
     </head>
 
     <body>
-        <header class="xfixed xtop-0 xleft-0 w-full bg-white shadow z-50 px-4 py-2 border-b-4 border-gray-300">
+        <header class="xfixed xtop-0 xleft-0 w-full bg-white shadow z-50 px-4 py-2 border-b-4 border-gray-400 xborder-black">
 
 
 
@@ -93,23 +93,12 @@
                         class="border p-2 mr-2 rounded border-black">
                     <button id="search-button" type="submit" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 active:bg-blue-700 active:scale-95 
                         transition duration-150 cursor-pointer">Search</button>
-
-
                 </form>
             </div>
-
-
         </header>
 
         <div id="display-div" class="w-full max-w-full mx-auto">
-
-
-
             <div id="map"></div>
-
-
-
-
         </div>
 
         <script>
@@ -136,12 +125,6 @@
 
             })();
 
-
         </script>
-
-
-
-
     </body>
-
 </html>
