--- a/js/74/74.html
+++ b/js/74/74.html
@@ -106,6 +106,9 @@
 
                 try {
                     const response = await fetch('apiKeys.json');
+                    if (!response.ok) {
+                        throw new Error(`Error fetching API keys: ${response.status} - ${response.statusText}`);
+                    }
                     globalThis.apiKeys = await response.json();
                     (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
                         key: `${apiKeys.google}`,
@@ -115,7 +118,7 @@
                 }
                 catch (error) {
 
-                    document.getElementById('message').textContent = `Error: ${error.message}`;
+                    document.getElementById('message').textContent = `API Key Error: ${error.message}`;
                     document.getElementById('message').classList.add('text-red-500');
 
                 }
