Fixed some layout things.

--- a/js/75/75.html
+++ b/js/75/75.html
@@ -61,7 +61,8 @@
     </head>
 
     <body>
-        <header class="xfixed xtop-0 xleft-0 w-full bg-white shadow z-50 px-4 py-2 border-b-4 border-gray-400 xborder-black">
+        <header
+            class="xfixed xtop-0 xleft-0 w-full bg-white shadow z-50 px-4 py-2 border-b-4 border-gray-400 xborder-black">
 
 
 
@@ -135,4 +136,5 @@
 
         </script>
     </body>
+
 </html>
