Added audio button.

--- a/js/76/76.html
+++ b/js/76/76.html
@@ -36,7 +36,16 @@
 
             .body-element {
                 position: absolute;
-                
+
+            }
+
+            #audio-image{
+                width: 5rem;
+                height: 5rem;
+                position: absolute;
+                left: 0;
+                top: 0;
+                cursor: pointer;
             }
         </style>
     </head>
@@ -78,9 +87,10 @@
 
 
 
-<audio src="media/music.mp3" id="audio"></audio>
+        <audio src="media/music.mp3" id="audio"></audio>
+        <img src="media/mute-speaker-icon.jpg" alt="" id="audio-image">
 
-<script src="76.js"></script>
+        <script src="76.js"></script>
     </body>
 
 </html>
