--- a/js/77/77.html
+++ b/js/77/77.html
@@ -88,7 +88,7 @@
         <div id="display-area"></div>
 
 
-        <audio src="media/music.mp3" id="audio"></audio>
+        <audio src="media/music.mp3" id="audio" loop></audio>
         <img src="media/mute-speaker-icon.jpg" alt="" id="audio-image">
 
         <script src="77.js"></script>
